kubernetes/apps/flux-system/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_PUBLIC_DOMAIN}
    hajimari.io/enable: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: &host flux-webhook.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
